--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                                 <td width="50%">
                                     <ul class="menu">
                                         <h4>Overview</h4>
-                                        <p><code>TypeScript</code> 내용을 확인하던 중 <code>ECMAScript</code> 가 자주 등장하고 <code>JavaScript</code>의 표준이라는 말이 나와 이번 세미나의 주제를 <code>ECMAScript</code>로 정했다. 실제 쓰고 있는 기술과 앞으로 추가되는 기술에 대해 미리 알아보고 추후 현업에서 도움이 되면 좋겠다.
+                                        <p><code>TypeScript</code> 내용을 확인하던 중 <code>ECMAScript</code> 가 자주 등장하고 <code>JavaScript</code>의 표준이라는 말이 나와 이번 세미나의 주제를 <code>ECMAScript</code>로 정했습니다. 실제 쓰고 있는 기술과 앞으로 추가되는 기술에 대해 미리 알아보고 추후 현업에서 도움이 되면 좋겠습니다.
                                         </p>
                                         <P>
-                                            위 단어는 이번 내용에 포함된 <code>키워드</code>이다. 해당 <code>키워드</code>가 의미하는 내용을 이해하면 좋겠다.
+                                            위 단어는 이번 내용에 포함된 <code>키워드</code>입니다. 해당 <code>키워드</code>가 의미하는 내용을 이해하시면 좋겠습니다.
                                         </P>
                                         <hr>
                                         <p>
@@ -78,9 +78,9 @@
                                         <p style="padding-left: 10px;">
                                         - Browser Implementataions<br />
                                         - ECMAScript 3<br />
-                                        - ECMAScript 5 (ES2015)<br />
-                                        - ECMAScript 6 (ES2016)<br />
-                                        - ECMAScript 7 (ES2017)
+                                        - ECMAScript 5<br />
+                                        - ECMAScript 6 (ES2015)<br />
+                                        - ECMAScript 7 (ES2016)
                                         </p>
                                         <hr>
                                         <li><a href="javascript:;" class="clickable" data-section="#references">4. References</a></li>
@@ -166,7 +166,7 @@
                         </div>
                         <h3>JavaScript</h3>
                         <p>
-                            <code>넷스케이프(Netscape)</code>에서 웹페이지에 동적인 요소를 구현하기 위해 1995년에 개발한 언어이다. <code>모질라(Mozilla)</code> 재단의 AOL에 회사가 넘어가고 2007년 12월 제작이 중단되었다. 그후 <code>Firefox</code>에 흡수되었으며, 현재 1.8.5 버전까지 출시되었다.
+                            <code>넷스케이프(Netscape)</code>에서 웹페이지에 동적인 요소를 구현하기 위해 Brendan Eich에 의해1995년에 개발한 언어이다. <code>모질라(Mozilla)</code> 재단의 AOL에 회사가 넘어가고 2007년 12월 제작이 중단되었다. 그후 <code>Firefox</code>에 흡수되었으며, 현재 1.8.5 버전까지 출시되었다.
                         </p>
                         <h3>JScript</h3>
                         <p>
@@ -1023,8 +1023,8 @@ function isBigThan10(element, index, array) {
     return element >= 10;
 }
 
-[2, 5, 8, 1, 4].every(isBigEnough); // false
-[12, 5, 8, 1, 4].every(isBigEnough); // true
+[2, 5, 8, 1, 4].some(isBigEnough); // false
+[12, 5, 8, 1, 4].some(isBigEnough); // true
 </pre>
                         <b>filter</b>
 						<pre class="prettyprint linenums">
@@ -1053,14 +1053,16 @@ array.forEach(function(v, i) {
 						<pre class="prettyprint linenums">
 // 배열에 들어있는 숫자들의 제곱근을 구하여 새로운 배열 만들기
 var numbers = [1, 4, 9];
-var roots = number.map(Math.sqrt);
+var roots = numbers.map(Math.sqrt);
 console.log(roots); // [1, 2, 3];
 console.log(numbers); // [1, 4, 9];
 
 // 오브젝트 재구성
 var kvArray = [{key:1, value:10}, {key:2, value:20}, {key:3, value:30}];
 var reformattedArray = kvArray.map(function(obj) {
-
+    var rObj = {};
+    rObj[obj.key] = obj.value;
+    return rObj;
 });
 console.log(reformattedArray); // [{1:10}, {2:20}, {3:30}]
 console.log(kvArray); // [{key:1, value:10}, {key:2, value:20}, {key:3, value:30}]
@@ -1075,11 +1077,11 @@ console.log(numbers); // [1, 4, 9]
 
 // 문자열 반전
 var str = '12345';
-[].map.call(str, function(x) {
+var reStr = [].map.call(str, function(x) {
     return x;
 }).reverse().join('');
 
-console.log(str); // 54321
+console.log(reStr); // 54321
 </pre>
                         <b>reduce</b>
 						<pre class="prettyprint linenums">
@@ -1140,10 +1142,12 @@ console.log(flattened); // [0, 1, 2, 3, 4, 5]
 //        20       |       0      |       0      | [0, 1, 2, 3, 4] |    20
 
 // 배열의 값 모두 더하기
+var total = 0;
 var sum = [0, 1, 2, 3].reduceRight(function(a, b) {
-    return a + b;
+	total = a + b;
+	return total;
 });
-consoel.log(sum); // 6
+console.log(total); // 6
 
 // 배열의 배열(2차원 배열) 1차원으로 내리기
 var flattened = [[0, 1], [2, 3], [4, 5]].reduceRight(function(a, b) {
@@ -1180,12 +1184,13 @@ var _promise = function(param) {
                 resolve("해결 완료");
             } else {
                 reject(Error("실패!"));
+			}
         }, 3000);
     });
 }
 
 // Promise 실행
-_promise(true);
+_promise(true)
 .then(function (text) {
     console.log(text);
 }, function (error) {
@@ -1288,7 +1293,7 @@ Promise.all([promise1, promise2]).then(function(values) {
                         <h4>2. Iteration</h4>
                         <p>
                             반복 처리를 나타내며 이를 위한 프로토콜(Protocol)을 갖고 있다. <code>이터러블(Iterable)</code> 프로토콜과 <code>이터레이터(Iterator)</code> 프로토콜로 구성된다.<br />
-                            자바스크립트는 이터러블 오브젝트에 <code>Symbol.iterator</code>가 존재해야 한다.
+                            자바스크립트는 이터러블 오브젝트에 <code>Symbol.iterator</code>가 존재해야 한다. (<a href="view/symbol.html" target="_blank">Symbol이란?</a>)
                         </p>
 						<a href="https://github.com/ES678/Exploring-ES6/tree/master/21%20%EC%9D%B4%ED%84%B0%EB%9F%AC%EB%B8%94%EA%B3%BC%20%EC%9D%B4%ED%84%B0%EB%A0%88%EC%9D%B4%ED%84%B0">https://github.com/ES678/Exploring-ES6/tree/master/21%20%EC%9D%B4%ED%84%B0%EB%9F%AC%EB%B8%94%EA%B3%BC%20%EC%9D%B4%ED%84%B0%EB%A0%88%EC%9D%B4%ED%84%B0</a><br />
                         <b>Iterable</b>
@@ -1379,7 +1384,7 @@ class Member {
     }
 };
 let obj = new Member();
-console.log(ob.getName()); // 이름
+console.log(obj.getName()); // 이름
 </pre>
                         <b>구문</b>
                         <div class="well">
@@ -1403,7 +1408,7 @@ class Member {
     }
 }
 let memberObj = new Member("스포츠");
-console.log(memeberObj.getName()); // 스포츠
+console.log(memberObj.getName()); // 스포츠
 </pre>
                         <b>extends 키워드</b>
                         <p>
@@ -1425,7 +1430,7 @@ class Soccer extends Sports {
     }
 };
 let obj = new Soccer(11);
-console.log(obj.getmember()); // 11
+console.log(obj.getMember()); // 11
 </pre>
                         <b>super 키워드</b>
                         <p>
@@ -1471,7 +1476,7 @@ console.log(Sports.getGround()); // 상암구장
                             메서드 이름 앞에 "get", "set"을 작성하여 <code>getter</code>, <code>setter</code>를 사용할 수 있다.
                         </p>
                         <pre class="prettyprint linenums">
-class Member() {
+class Member {
     set setName(name) {
         this.name = name;
     }
@@ -1513,14 +1518,6 @@ var b = 'bar';
 var obj = { a, b };
 console.log(obj.a); // 'foo'
 console.log(obj.b); // 'bar'
-
-var obj = {
-    get firstChar() {
-        return this.name[0];
-    }
-};
-console.log(obj.name); // 'foo'
-console.log(obj.firstChar); // 'f'
 
 var prop = 'foo';
 var obj = {
@@ -1575,7 +1572,7 @@ console.log("B:", one, two); // B: 1 2
 [one, two, three, four] = values;
 console.log("C:", one, two, three, four); // C: 1 2 3 undefined
 
-[one, two, [three, four]] = [1, 2 [73, 74]];
+[one, two, [three, four]] = [1, 2, [73, 74]];
 console.log("D:", one, two, three, four); // D: 1 2 73 74
 
 let one, two, three, four, other;
@@ -1583,7 +1580,7 @@ let one, two, three, four, other;
 console.log(one, four); // 1, 4
 
 [one, ...others] = [1, 2, 3, 4];
-console.log(other); // [2, 3, 4];
+console.log(others); // [2, 3, 4];
 </pre>
                         <hr>
                         <h4>8. Spread, Rest</h4>
@@ -1667,6 +1664,7 @@ for (var k=0; k < values.length; k++) {
                         <pre class="prettyprint linenums">
 //let
 let a = 1;
+let c = 4;
 function test() {
   console.log(a);
 
@@ -1681,7 +1679,7 @@ function test() {
 test();
 //1
 //2
-//undefined
+//4
 
 //const
 var pi = 3.14;
@@ -1748,7 +1746,7 @@ let generatorObj = sports(10);
 
 console.log(generatorObj.next()); // Object {value: 10, done: false}
 console.log(generatorObj.next()); // Object {value: NaN, done: false}
-console.log(generatorObj.next(20)); // Object {value: 30, done: false}
+console.log(generatorObj.next(20)); // Object {value: 30, done: true}
 
 function* sports(one) {
     yield one;
@@ -1809,7 +1807,7 @@ let item = {
 console.log(item.onetwo); // 12
 
 let item = "tennis";
-let sports= }
+let sports= {
     [item]: 1,
     [item + "Game"]: "윔블던",
     [item + "Method"](){
@@ -1863,9 +1861,14 @@ let sports = {
 let keyList = Object.keys(sports);
 for (var key of keyList) {
     console.log(key, sports[key]);
-};
+}
+for (var key in sports) {
+    console.log(key);
+}
 // soccer 축구
 // bassball 야구
+// soccer
+// baseball
 </pre>
                         <hr>
                         <h3>ECMAScript 7</h3>
